fix pagebreaks on print?

--- a/src/modules/deck.module.css
+++ b/src/modules/deck.module.css
@@ -11,4 +11,6 @@
     row-gap: 20px;
     margin: auto;
     width: 1200px;
+    page-break-after: always;
+    page-break-inside: avoid;
 }
